Anita final upload

--- a/html/School.html
+++ b/html/School.html
@@ -11,23 +11,23 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="head">
     <div class="inner">
       <h2 class="top">全原進食中 </h2>
 
       <p id="catch">各個學院介紹!</p>
-
-      <div class="h-home">
-        <p id="pagetop">
-          <a class="hhhome" href="../html/title.html">
-            <img src="../images/house (1) (1) (1).png">
-          </a>
-        </p>
-      </div>
+    </div>
+    <div class="h-home">
+      <p id="pagetop">
+        <a class="hhhome" href="../html/title.html">
+          <img src="../images/house (1) (1) (1).png">
+        </a>
+      </p>
+    </div>
   </header>
 
   <div class="item">
-    <a href="../html/Science.html">
+    <a class="c-i-a" href="../html/Science.html">
       <img src="../images/chemical.png">
     </a>
     <div class="small">
@@ -36,7 +36,7 @@
   </div>
 
   <div class="item">
-    <a href="../html/Law.html">
+    <a class="c-i-a" href="../html/Law.html">
       <img src="../images/justice-scale.png">
     </a>
     <div class="small">
@@ -45,7 +45,7 @@
   </div>
 
   <div class="item">
-    <a href="../html/Engineering.html">
+    <a class="c-i-a" href="../html/Engineering.html">
       <img src="../images/gears.png">
     </a>
     <div class="small">
@@ -54,7 +54,7 @@
   </div>
 
   <div class="item">
-    <a href="../html/Electrical Engineering and Computer Science.html">
+    <a class="c-i-a" href="../html/Electrical Engineering and Computer Science.html">
       <img src="../images/electronic.png">
     </a>
     <div class="small">
@@ -63,7 +63,7 @@
   </div>
 
   <div class="item">
-    <a href="../html/Education.html">
+    <a class="c-i-a" href="../html/Education.html">
       <img src="../images/presentation.png">
     </a>
     <div class="small">
@@ -72,7 +72,7 @@
   </div>
 
   <div class="item">
-    <a href="../html/business-administration.html">
+    <a class="c-i-a" href="../html/business-administration.html">
       <img src="../images/administrator.png">
     </a>
     <div class="small">
@@ -81,7 +81,7 @@
   </div>
 
   <div class="item">
-    <a href="../html/arts.html">
+    <a class="c-i-a" href="../html/arts.html">
       <img src="../images/painting.png">
     </a>
     <div class="small">
