--- a/html/food.html
+++ b/html/food.html
@@ -16,14 +16,10 @@
 
       <p id="catch">讓我們來介紹周邊美食!</p>
     </div>
-    <div class="h-home">
-      <p id="pagetop">
-        <a class="hhhome" href="../html/title.html">
-          <img src="../images/house (1) (1) (1).png">
-        </a>
-      </p>
-    </div>
+
+
   </header>
+
 
   <div class="tb">
     <table border="0" align="center">
@@ -77,7 +73,8 @@
   </div>
 
   <div class="ss">
-    <a href="#"><img src="../images/youtube (3).png">
+    <a href="https://youtu.be/A9RYSLD4p0c">
+      <img src="../images/youtube (3).png">
     </a>
   </div>
 
