--- a/html/title.html
+++ b/html/title.html
@@ -63,7 +63,7 @@
     <div class="cnn">
       <div class="cnn-img">
         <a class="c-i-a" href="../html/School.html">
-          <img src="../images/school.png.lnk">
+          <img src="../images/school.png">
         </a>
 
         <div class="small">
@@ -74,7 +74,7 @@
 
       <div class="cnn-img">
         <a class="c-i-a" href="../html/food.html">
-          <img src="../images/tea.png.lnk">
+          <img src="../images/tea.png">
 
         </a>
 
@@ -86,7 +86,7 @@
 
       <div class="cnn-img">
         <a class="c-i-a" href="../html/aboutus.html">
-          <img src="../images/contact-us.png.lnk">
+          <img src="../images/contact-us.png">
         </a>
 
         <div class="small">
