--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -65,7 +65,7 @@
     <h1 align="center">李柏翰 10844252</h1>
     <p>
       <br>
-      <img src="../images/3.jpg" width="30%">
+      <img src="../images/3.JPG" width="30%">
       由於我是這學期的轉系生，在面對這堂課的上課內容時，其實有很多挫折，對於初來乍到的我來說，要直接開始架設網站，說實在話，這是我想都沒有想過的事，但在經歷多次的嘗試及試驗後，我發現原來我是也能做到的，即使花的時間比別人來得長，即使需要更多的努力，但我覺得這一切都很值得。而在經過這次的期中報告，雖然時常碰壁，但也都因著請教組員以及上網查資料而將問題迎刃而解，真的很感謝有非常用心的組員。
     </p>
   </div>
