--- a/html/3yi.html
+++ b/html/3yi.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="../CSS/FOOD-4.css">
 </head>
 <body>
-    <h1> 今天想來點什麼  要不就<span>BURGER</span>吧!<br>
+    <h1> <span>宜珍</span>讓你花少少錢就能吃飽!<br>
         <P class="TIT">Food is your body's fuel. Without fuel, your body wants to shut down. 
        </P></h1>
        <DIV class="ALL">
 		<div class="con">     
            <a href=" https://mnya.tw/yo/word/363.html"
            ><img src="../images/32.jpg" alt="點擊查詢FACEBOOK">
-            <h2>22BURGER茶餐館</h2> </a>     
+            <h2>宜珍快餐廳</h2> </a>     
             <p>這間是開在中原大學教學小門旁邊的宜珍快餐       
             菜色眾多而且都很新鮮~
     便宜又大碗的快餐店</p>		
@@ -31,6 +31,22 @@
 
          </DIV>
 
+         <div class="cnn">
+            <div class="cnn-img">
+              <a class="c-i-a" href="../html/title.html">
+                <img src="../images/house (1) (1) (1).png">
+              </a>
+             <div class="small">
+                <p>回首頁</p>
+              </div>
+            </div>  <div class="cnn-img">
+                <a class="c-i-a" href="../html/title.html">
+                  <img src="../images/tea.png">
+                </a>
+               <div class="small">
+                  <p>美食首頁</p>
+                </div>
+              </div></div>
     <footer id="footer">      
         <br>
         <br>
