--- a/html/522bur.html
+++ b/html/522bur.html
@@ -12,18 +12,19 @@
     <h1> 今天想來點什麼  要不就<span>BURGER</span>吧!<br>
         <P class="TIT">Food is your body's fuel. Without fuel, your body wants to shut down. 
        </P></h1>
-       <DIV class="ALL">
-		<div class="con">     
-           <a href="https://www.facebook.com/22burger/"
-           ><img src="../images/5-8.jpg" alt="點擊查詢FACEBOOK">
-            <h2>22BURGER茶餐館</h2> </a>     
-            <p>#100%純手工自製鮮嫩多汁的漢堡肉
+      <h2>22BURGER茶餐館 </h2><p>   
+                p>#100%純手工自製鮮嫩多汁的漢堡肉
                 #餐點皆現點現做
                 #新鮮食材
                 #自行研發的特製麵包
                 #獨特醬料
-                #最重要的......希望敬愛的客人有賓至如歸的享受!!!!!!!</p>		
- 
+                #最重要的......希望敬愛的客人有賓至如歸的享受!!!!!!!</p>  
+       <div class="all">
+		<div class="con">
+          
+           <a href="https://www.facebook.com/22burger/"
+           ><img src="../images/5-8.jpg" alt="點擊查詢FACEBOOK">
+             </a>     
             </div>
 
             <div class="con">     
@@ -33,6 +34,22 @@
 
          </DIV>
 
+         <div class="cnn">
+            <div class="cnn-img">
+              <a class="c-i-a" href="../html/title.html">
+                <img src="../images/house (1) (1) (1).png">
+              </a>
+             <div class="small">
+                <p>回首頁</p>
+              </div>
+            </div>  <div class="cnn-img">
+                <a class="c-i-a" href="../html/title.html">
+                  <img src="../images/tea.png">
+                </a>
+               <div class="small">
+                  <p>美食首頁</p>
+                </div>
+              </div></div>
     <footer id="footer"> 
          　<div id="footer">    
         <br>
