--- a/html/7high.html
+++ b/html/7high.html
@@ -31,6 +31,23 @@
      			
 		</div>
 	</div>
+    
+  <div class="cnn">
+    <div class="cnn-img">
+      <a class="c-i-a" href="../html/title.html">
+        <img src="../images/house (1) (1) (1).png">
+      </a>
+     <div class="small">
+        <p>回首頁</p>
+      </div>
+    </div>  <div class="cnn-img">
+        <a class="c-i-a" href="../html/title.html">
+          <img src="../images/tea.png">
+        </a>
+       <div class="small">
+          <p>美食首頁</p>
+        </div>
+      </div></div>
     <footer id="footer">      
         <br>
         <br>
