--- a/html/Education.html
+++ b/html/Education.html
@@ -22,12 +22,12 @@
     </table>
     </header>
 
-    <h1>中原大學人文與教育學院 </h1>
+    <h1>人文與教育學院 </h1>
      <table>
     <td><div class="img2"><a href="https://cyche.cycu.edu.tw/"><img src="../images/edu_photo.jpg" width="700px"></a></div></td>
-    <td>    
+    <td>    <div class="introduction">
     <p class="introduction">
-        <h2 center>&emsp;發展專業、追求通識、建構全人</h2>
+        <h2 center>發展專業、追求通識、建構全人</h2>
         &emsp;&emsp;中原大學的人育學院在學校的全人村，然後他們有著特教系、應華、應外等很有意思的科系可以選擇。人文與教育學院自民國88年成立以來，
         即致力於以「身、心、靈」為基本內涵，追求天、人、物、我和諧之「全人教育」。現設有應用外國語文學系(所)、應用華語文學系(所)、特殊教育學系(所)、
         宗教研究所及教育研究所及學士後數位音樂應用學士學位學程；以及語言中心、通識教育中心及師資培育中心等三個中心；另外於107學年度起增設人文與教育學院
@@ -42,7 +42,7 @@
     <p>三、精緻通識課程與活動規劃：通識教育課程設計涵蓋以天、人、物、我四個面向。整合跨領域學程，全方位提升全校人文視野。</p>
 
     <p>四、發展華語潛力迎向國際：全球吹起華語熱潮，將台灣精緻的華語文教學與檢定推向國際，邁向卓越。 </p>        
-    </p></td>
+    </p></td></div>
      </table>
 
 
