--- a/html/Engineering.html
+++ b/html/Engineering.html
@@ -25,7 +25,7 @@
     <h1>工學院</h1>
      <table>
     <td><div class="img2"><a href="https://wpb.cycu.edu.tw/engineering/"><img src="../images/Engineering_photo.jpg" width="700px"></a></div></td>
-    <td>
+    <td><div class="introduction">
     <p class="introduction">
         <h2>踐履篤實，精益求精 </h2>
         &emsp;&emsp;中原大學於1955年創立時為中原理工學院，創校4系中即設有包括本院之化學工程及土木工程兩學系；1980年本校升格改制為大學，
@@ -34,7 +34,7 @@
         人員進修。工學院係全國率先以院內學系、研究所接受中華工程教育學會國際工程教育認證之單位，榮獲多年期之認證成果。103學年度醫工系增設「生醫材料
         科技碩士國際學程」，擴大招收國際研究生，並有多元化之交換、交流、暑期體驗營等國際學習管道。 為強調跨領域學習，107學年度新設「化學工程與材料科
         學國際碩士學位學程」、「永續環境與能源國際碩士學位學程」、「工學院學士學位學程」，培養工程領域跨域人才。
-    </p></td>
+    </p></td></div>
      </table>
 
 
