--- a/html/business-administration.html
+++ b/html/business-administration.html
@@ -26,8 +26,8 @@
     <h1>商學院</h1>
      <table>
     <td><div class="img2"><a href="https://cob.cycu.edu.tw/"><img src="../images/BA_photo.jpg" width="700px"></a></div></td>
-    <td>
-    <p class="introduction">
+    <td><div class="introduction">
+    <p>
         <h2>&emsp;運籌帷幄，追求卓越</h2>
         &emsp;&emsp;中原大學的商學院有企管系、資管系、會記系等等系可以選擇，在面對以上的這麽多的選擇上，商學院成立於民國69年，現有90位專任教師，
         博士學位的專任教師比例佔96%，學生人數 (大學部、碩士班、碩專班及博士班)，約為3,600餘人。設有5個學系、1個學士後商業巨量資料管理學程、6個碩士班
@@ -68,7 +68,7 @@
         <li>校際合作：合作辦學簽約學校多達50幾所，提供學生美、歐、紐澳及大陸等地國際交換及雙聯學位機會。 </li>
         
 
-    </p></td>
+    </p></td></div>
      </table>
 
      
