--- a/html/food-1menu.html
+++ b/html/food-1menu.html
@@ -14,7 +14,26 @@
     <img src="../images/H-2.jpg" >
   
 </div>
-<span class="be"><a href="food.html">回首頁</a> </span>
+
+<div class="cnn">
+    <div class="cnn-img">
+      <a class="c-i-a" href="../html/title.html">
+        <img src="../images/house (1) (1) (1).png">
+      </a>
+     <div class="small">
+        <p>回首頁</p>
+      </div>
+    </div>
+    <div class="cnn-img">
+        <a class="c-i-a" href="../html/food.html">
+          <img src="../images/tea.png">
+        </a>
+       <div class="small">
+          <p>美食首頁</p>
+        </div>
+      </div>
+    </div>
+
 
     <footer id="footer">      
         <br>
