--- a/html/food.html
+++ b/html/food.html
@@ -13,84 +13,156 @@
   <header class="header">
     <div class="inner">
       <h2 class="top">全原進食中 </h2>
-
-      <p id="catch">讓我們來介紹周邊美食!</p>
+      <p id="catch">
+        <marquee direction="right" height="30" scrollamount="5" behavior="alternate">讓我們來介紹<span>中原大學</span>周邊美食!
+        </marquee>
+      </p>
     </div>
 
-
   </header>
-
 
   <div class="tb">
     <table border="0" align="center">
       　<tr>
         　<td>
-          <a href="../html/1hamtree.html" class="photo-link-block w-inline-block">
-            <img src="../images/H1-6.jpg" alt="漢堡樹" /><br>
-            　<div class="title">早起的鳥兒來吃樹</div></a>
-        </td>
-        <td><a href="../html/2star.html" class="photo-link-block w-inline-block">
+          <div class="wei-grids-wall">
+            <div class="wei-grid">
+              <div class="wei-grid-special0">
+                <a href="../html/1hamtree.html" target="_blank">
+                  <img class="wei-image5" src="../images/H1-6.jpg" alt="漢堡樹" />
+              </div>
+            </div>
+          </div>
+          <div class="title"></div>早起的鳥兒來吃樹
+  </div> </a>
+  </td>
+  <td>
+    <div class="wei-grids-wall">
+      <div class="wei-grid">
+        <div class="wei-grid-special0">
+          <a href="../html/2star.html">
             <img src="../images/2-6.jpg" alt="星巴克" />
-            <div class="title">星猩只有巴克重</div>
-          </a>
-        </td>
-        　<td>
-          <a href="../html/4286.html" class="photo-link-block w-inline-block">
+        </div>
+      </div>
+    </div>
+    <div class="title">星猩只有巴克重</div></a>
+  </td>
+  　<td>
+    <div class="wei-grids-wall">
+      <div class="wei-grid">
+        <div class="wei-grid-special0">
+          <a href="../html/4286.html">
             <img src="../images/47.jpg" alt="286水餃" />
-            <div class="title">286水餃帶你6起來</div>
-          </a>
-        </td> 　
-      </tr>
-      　<tr>
-        　<td><a href="../html/522bur.html" class="photo-link-block w-inline-block">
-            <img src="../images/5-10.jpg" alt="美式料理" />
-            <div class="title">鐵漢BURGER吃起來</div>
-          </a></td>
-        　<td> <a href="../html/9night.html" class="photo-link-block w-inline-block">
-            <img src="../images/0.jpg" alt="夜市" />
-            <div class="title">肖想很久的夜市生活</div>
-          </a></td>
-        　<td> <a href="../html/3yi.html" class="photo-link-block w-inline-block">
-            <img src="../images/32.jpg" alt="宜珍快餐" />
-            <div class="title">宜珍是個好老婆</div>
-          </a></td>
-        　</tr>
-      　<tr>
-        　<td><a href="../html/6bread.html" class="photo-link-block w-inline-block">
-            <img src="../images/6.jpg" alt="麵包店" />
-            <div class="title">胖胖麵包店</div>
-          </a></td>
-        　<td><a href="../html/7high.html" class="photo-link-block w-inline-block">
-            <img src="../images/70.jpg" alt="高記商行" />
-            <div class="title">吃飯吃麵</div>
-          </a></td>
-        　<td><a href="../html/8pot.html" class="photo-link-block w-inline-block">
-            <img src="../images/84.jpg" alt="火鍋" />
-            <div class="title">熱氣騰騰騰火鍋</div>
-          </a></td>
-        　</tr>
-    </table>
-  </div>
-
-  <div class="ss">
-    <a href="https://youtu.be/A9RYSLD4p0c">
-      <img src="../images/youtube (3).png">
+        </div>
+      </div>
+    </div>
+    <div class="title">286水餃帶你6起來</div>
     </a>
+  </td> 　
+  </tr>
+  　<tr>
+    　<td>
+      <div class="wei-grids-wall">
+        <div class="wei-grid">
+          <div class="wei-grid-special0">
+            <a href="../html/522bur.html">
+              <img src="../images/5-10.jpg" alt="美式料理" />
+          </div>
+        </div>
+      </div>
+      <div class="title">鐵漢BURGER吃起來</div>
+      </a>
+    </td>　
+    <td>
+      <div class="wei-grids-wall">
+        <div class="wei-grid">
+          <div class="wei-grid-special0">
+            <a href="../html/9night.html">
+              <img src="../images/0.jpg" alt="夜市" />
+          </div>
+        </div>
+      </div>
+      <div class="title">肖想很久的夜市生活</div>
+      </a>
+    </td>
+    　<td>
+      <div class="wei-grids-wall">
+        <div class="wei-grid">
+          <div class="wei-grid-special0"><a href="../html/3yi.html">
+              <img src="../images/32.jpg" alt="宜珍快餐" />
+          </div>
+        </div>
+      </div>
+      <div class="title">宜珍是個好老婆</div>
+      </a>
+    </td>
+    　</tr>
+  　<tr>
+    　<td>
+      <div class="wei-grids-wall">
+        <div class="wei-grid">
+          <div class="wei-grid-special0">
+            <a href="../html/6bread.html">
+              <img src="../images/6.jpg" alt="麵包店" />
+          </div>
+        </div>
+      </div>
+      <div class="title">胖胖麵包店</div>
+      </a>
+    </td>
+    　<td>
+      <div class="wei-grids-wall">
+        <div class="wei-grid">
+          <div class="wei-grid-special0">
+            <a href="../html/7high.html">
+              <img src="../images/70.jpg" alt="高記商行" />
+          </div>
+        </div>
+      </div>
+      <div class="title">吃飯吃麵</div>
+      </a>
+    </td>
+    　<td>
+      <div class="wei-grids-wall">
+        <div class="wei-grid">
+          <div class="wei-grid-special0">
+            <a href="../html/8pot.html">
+              <img src="../images/84.jpg" alt="火鍋" />
+          </div>
+        </div>
+      </div>
+      <div class="title">熱氣騰騰騰火鍋</div>
+      </a>
+    </td>
+    　</tr>
+  </table>
+  </div>
+  </div>
   </div>
 
-  <div class="small">
-    <p>
-      請看影片~
-    </p>
+  <div class="cnn">
+    <div class="cnn-img">
+      <a class="c-i-a" href="../html/title.html">
+        <img src="../images/house (1) (1) (1).png">
+      </a>
+      <div class="small">
+        <p>回首頁</p>
+      </div>
+    </div>
+    <div class="cnn-img">
+      <a class="c-i-a" href="https://youtu.be/LS2HwIw882M">
+        <img src="../images/youtube (3).png">
+      </a>
+      <div class="small">
+        <p>影片欣賞</p>
+      </div>
+    </div>
   </div>
-
-
-
 
 
   <!--頁尾 -->
   <footer id="footer">
-    <br><br>
+    <br>
     Copyright © 2021 ChihAn ChiaHsuan ChangHuan YuNung<br>
     32023 桃園市中壢區中北路二OO號 <br>
     200 Chung Pei Road, Chung Li District, Taoyuan City, Taiwan 32023, R.O.C.<br>
