--- a/html/1hamtree.html
+++ b/html/1hamtree.html
@@ -10,14 +10,14 @@
 <body >
     <div class="all">
 		<h1> 美好的一天  從<span>早餐</span>開始<br>
-         Food is your body's fuel. Without fuel, your body wants to shut down. 
-        </h1>
+      <P class="TIT">Food is your body's fuel. Without fuel, your body wants to shut down. 
+        </P></h1>
 		<div class="con">     
             <a href="https://www.facebook.com/%E6%BC%A2%E5%A0%A1%E6%A8%B9-Burger-Tree-Brunch%E4%B8%AD%E5%8E%9F%E5%BA%97%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%B8-392767664154120/" target="_blank"><img src="../images/H-1.jpg" alt="點擊查詢FACEBOOK"></a>
             <h2>漢堡樹粉絲專頁</h2> 
             <p>了解更多</p>		
 		</div>
-		<div class="con">                     
+		<div class="con">                        
         <a href="https://goo.gl/maps/L1AsJ3mRvQnu4v2q8" target="_blank"><img src="../images/H-9.jpg" alt="告訴我怎麼走">
            </a>
            <h2>門市查詢</h2>
@@ -31,6 +31,25 @@
 			</p>
 		</div>
 	</div>
+  
+  <div class="cnn">
+    <div class="cnn-img">
+      <a class="c-i-a" href="../html/title.html">
+        <img src="../images/house (1) (1) (1).png">
+      </a>
+     <div class="small">
+        <p>回首頁</p>
+      </div>
+    </div>
+    <div class="cnn-img">
+      <a class="c-i-a" href="../html/title.html">
+        <img src="../images/tea.png">
+      </a>
+     <div class="small">
+        <p>美食首頁</p>
+      </div>
+    </div>
+  </div>
       <footer id="footer">      
     <br>
     <br>
