--- a/html/Electrical Engineering and Computer Science.html
+++ b/html/Electrical Engineering and Computer Science.html
@@ -25,7 +25,7 @@
     <h1>電機資訊學院</h1>
      <table>
     <td><div class="img2"><a href="https://eeic.cycu.edu.tw/"><img src="../images/eeic_photo.jpg" width="700px"></a></div></td>
-    <td>
+    <td><div class="introduction">
     <p class="introduction">
         <h2>創新整合‧登高行遠 </h2>
         &emsp;&emsp;電機資訊學院成立於西元2005年8月，乃融合電資科技與管理教育之學院，結合理論與實務見稱。電子系、電機系、資工系、工業系創立至今有40-50年歷史
@@ -47,7 +47,7 @@
         &emsp;&emsp;六、本院校友以專業奉獻與勤奮踏實的態度，無私地在社會的各個角落工作耕耘，並多為領導統御之人才(台積電、聯電、鴻海、美光、宏達電子、世界先進、中衛發展中心…等管理階層)。優秀的表現不但
 引領國內科技產業發展，也讓本校備受肯定。透過「產業實習、產業實務講座、產業專題、服務學習、證照課程及專案管理」等課程，大幅提升學生研究水準與就業競爭，務實大學「四年一貫」之能力培
 養及學用合一理念。
-    </p></td>
+    </p></td></div>
      </table>
 
 
