--- a/html/title.html
+++ b/html/title.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body background="../images/00.jpg">
   <header class="header">
     <div class="inner">
       <h2 class="top">全原進食中 </h2>
